Global Gradient For Buttons

--- a/EatFast/EatFast/App.xaml
+++ b/EatFast/EatFast/App.xaml
@@ -10,6 +10,15 @@
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Width" Value="150"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="DarkCyan" Offset="0.0"/>
+                        <GradientStop Color="LightBlue" Offset="0.5"/>
+                        <GradientStop Color="DarkCyan" Offset="1"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
         </Style>
 
         <Style TargetType="Button" BasedOn="{StaticResource DefaultTextBoxStyles}"/>
