--- a/EatFast/EatFast/App.xaml
+++ b/EatFast/EatFast/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="EatFast.App"
+    x:Class="Teamer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:EatFast"
+    xmlns:local="using:Teamer"
     RequestedTheme="Light">
 
     <Application.Resources>
@@ -10,6 +10,8 @@
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Width" Value="150"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="BorderBrush" Value="Gray"/>
+            <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="Background">
                 <Setter.Value>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -22,5 +24,18 @@
         </Style>
 
         <Style TargetType="Button" BasedOn="{StaticResource DefaultTextBoxStyles}"/>
+        
+        <Style TargetType="TextBlock" x:Key="DefaultTextBoxStyle">
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontStretch" Value="UltraExpanded"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+            <Setter Property="FontWeight" Value="ExtraBlack"/>
+            <Setter Property="Foreground" Value="AliceBlue"/>
+        </Style>
+
+        <Style TargetType="TextBlock" BasedOn="{StaticResource DefaultTextBoxStyle}"/>
+
     </Application.Resources>
 </Application>
