--- a/EatFast/EatFast/MainPage.xaml
+++ b/EatFast/EatFast/MainPage.xaml
@@ -1,50 +1,66 @@
 ﻿<Page
-    x:Class="EatFast.MainPage"
+    x:Class="Teamer.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:EatFast"
+    xmlns:local="using:Teamer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Page.Transitions>
-        <TransitionCollection>
-            <NavigationThemeTransition>
-                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
-                    <SlideNavigationTransitionInfo/>
-                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
-            </NavigationThemeTransition>
-        </TransitionCollection>
-    </Page.Transitions>
 
-    <Grid Name="mainMenuGrid">
-        <Grid.Background>
-            <ImageBrush ImageSource="Design/download.jpg" />
-        </Grid.Background>
-
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="DarkCyan" Offset="0.0"/>
+                <GradientStop Color="LightBlue" Offset="0.5"/>
+                <GradientStop Color="DarkCyan" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
 
-        <TextBlock Text="Eat Fast" TextAlignment="Center" FontSize="38" FontStyle="Oblique" Foreground="DarkCyan" FontWeight="ExtraBlack"/>
+        <TextBlock Text="Teamer" 
+                   Grid.Row="0"
+                   Grid.Column="1"
+                   FontSize="36"
+                   />
+        <StackPanel Grid.Row="1"
+                    Grid.Column="1"
+                    VerticalAlignment="Center" >
+            <TextBlock Text="Username" FontSize="20" />
+            <TextBox Height="40" PlaceholderText="Enter Username"/>
+            <TextBlock Text="Password" Foreground="AliceBlue" FontSize="20" />
+            <TextBox Height="40" PlaceholderText="Enter Password"/>
+        </StackPanel>
 
-
-        <ListView Grid.Row="1" HorizontalAlignment="Center" ScrollViewer.VerticalScrollBarVisibility="Hidden">
-            <StackPanel>
-                <Button Content="Menu" Click="NavigateToMenuPage"/>
-                
-                <Button Content="Farvourites"/>
-                
-                <Button Content="Locations" Click="NavigateToPage" />
-
-                <Button Content="FeedBack"/>
-
-                <Button Content="Selfies"/>
-
-                <Button Content="Previous"/>
-
-                <Button Content="Exit"/>
-            </StackPanel>
-        </ListView>
+        <Grid Grid.Row="2"
+              Grid.Column="1"
+              Grid.RowSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Button  Foreground="Black"
+                     Content="Log in"
+                Grid.Row="0"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"  Width="Auto"/>
+            <TextBlock Text="OR"
+                       Grid.Row="1"/>
+            <Button Grid.Row="2" Foreground="Black"
+                     Content="Sign in"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"  Width="Auto"/>
+        </Grid>
     </Grid>
 </Page>
