--- a/EatFast/EatFast/Pages/LocationsPage.xaml
+++ b/EatFast/EatFast/Pages/LocationsPage.xaml
@@ -1,20 +1,23 @@
 ﻿<Page
-    x:Class="EatFast.LocationsPage"
+    x:Class="Teamer.Pages.LocationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:EatFast"
+    xmlns:local="using:Teamer.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListBox ItemsSource="{Binding}" Name="locationsList">
-            <ListBoxItem Content="{Binding}" />
-        </ListBox>
-    </Grid>
-    <Page.BottomAppBar>
-        <AppBar>
-            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
-        </AppBar>
-    </Page.BottomAppBar>
+  
+
+        <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <ListBox ItemsSource="{Binding}" Name="locationsList">
+                <ListBoxItem Content="{Binding}" />
+            </ListBox>
+        </Grid>
+        <Page.BottomAppBar>
+            <AppBar>
+                <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+            </AppBar>
+        </Page.BottomAppBar>
+
 </Page>
