--- a/EatFast/EatFast/App.xaml
+++ b/EatFast/EatFast/App.xaml
@@ -6,6 +6,18 @@
     RequestedTheme="Light">
 
     <Application.Resources>
+        <Style TargetType="Grid"  x:Key="mainGrid">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="DarkCyan" Offset="0.0"/>
+                        <GradientStop Color="LightBlue" Offset="0.5"/>
+                        <GradientStop Color="DarkCyan" Offset="1"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
         <Style TargetType="Button" x:Key="DefaultTextBoxStyles">
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Width" Value="150"/>
