--- a/EatFast/EatFast/MainPage.xaml
+++ b/EatFast/EatFast/MainPage.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
+
+    <Grid Style="{StaticResource mainGrid}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="3*"/>
@@ -19,14 +20,6 @@
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                <GradientStop Color="DarkCyan" Offset="0.0"/>
-                <GradientStop Color="LightBlue" Offset="0.5"/>
-                <GradientStop Color="DarkCyan" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-
         <TextBlock Text="Teamer" 
                    Grid.Row="0"
                    Grid.Column="1"
@@ -63,4 +56,5 @@
                     VerticalAlignment="Stretch"  Width="Auto"/>
         </Grid>
     </Grid>
+
 </Page>
